* Fixing #321 dhdr10_opt not added for x265 commands (thanks to GizmoDudex)
* Fixing #327 FastFlix Duplicates encoding task and encodes same movie to infinity (thanks to Wontell)
* Fixing #324 NVEncC wrong Interlace Value set by FastFlix (thanks to Wontell)
* Fixing #278 FastFlix occasionally getting stuck on a single video in a queue (thanks to kamild1996)
* Fixing level was not being passed to hardware encoders

## Version 4.8.1

* Fixing #315 HDR10 info not parsed from subsequent video tracks than the first, again (thanks to msaintauret)

## Version 4.8.0

* Adding #313 basic vsync support for hardware encoders (thanks to Wontell)
* Adding #312 additional pixel formats for most encoders (thanks to Owen Quinlan)
* Adding "Auto" profile for VCEncC
* Changing #292 back to PySide2 to be compatible with Windows 7 and 8 (thanks to Causemic)
* Fixing #315 HDR10 info not parsed from subsequent video tracks than the first (thanks to msaintauret)
* Fixing #310 QT was complaining about some PNG formats (thanks to Don Gafford)
* Fixing profile not being passed for AVC with VCEencC and stuck on Baseline
* Fixing that force 10-bit encoding for NVEencC was not set from profiles properly (thanks to wynterca)

## Version 4.7.1

* Fixing #304 New profile Audio conversion downmix and bitrate issues (thanks to wynterca)

## Version 4.7.0

* Adding #164 audio matching in profiles (thanks to bmcassagne)
* Adding #261 Advanced settings are currently not saved on Profiles (thanks to georgesaumen)
* Adding #294 NVEncC 10-bit encoding mode for 8-bit source (thanks to Don Gafford)
* Adding HDR10 support, svtav1-params, scene detection, and crf option for SVT AV1
* Adding max colors and stats mode to GIF
* Adding OpenCL support for Remove HDR to speed it up
* Changing FFmpeg download to look for latest master GPL builds
* Fixing #296 low quality auto-crop due to high rounding, increasing accuracy from 16 to 2 pixels (thanks to Rayman24365)